--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://josiahayres.github.io/clocktime/",
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "notistack": "^0.9.17",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
