--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm version minor && npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +41,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "chalk": "^4.1.0",
+    "check-prop-types": "^1.1.2",
+    "gh-pages": "^3.1.0",
+    "prop-types": "^15.7.2",
+    "react-styleguidist": "^11.0.8"
   }
 }
