--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "clocktime",
+  "author": {
+    "name": "Josiah Ayres",
+    "email": "josiahayres@gmail.com",
+    "url": "https://www.linkedin.com/in/josiahayres/"
+  },
   "version": "1.2.0",
   "private": true,
   "homepage": "https://josiahayres.github.io/clocktime/",
@@ -17,7 +22,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run styleguide:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm version minor && npm run build",
