--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
   "private": true,
   "homepage": "https://josiahayres.github.io/clocktime/",
   "dependencies": {
+    "@emotion/react": "11.10.4",
+    "@emotion/styled": "11.10.4",
     "@material-ui/core": "^4.10.2",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "notistack": "^0.9.17",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "source-map-explorer": "^2.4.2"
+    "@mui/material": "5.10.6",
+    "@mui/styles": "5.10.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "notistack": "^2.0.5",
+    "react": "^18.2@material-ui/core.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -45,10 +49,10 @@
     ]
   },
   "devDependencies": {
-    "chalk": "^4.1.0",
+    "chalk": "^5.0.1",
     "check-prop-types": "^1.1.2",
-    "gh-pages": "^3.1.0",
-    "prop-types": "^15.7.2",
-    "react-styleguidist": "^11.0.8"
+    "gh-pages": "^4.0.0",
+    "prop-types": "^15.8.1",
+    "react-styleguidist": "^12.0.0"
   }
 }
