--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
-    "@material-ui/core": "^4.10.2",
+    "@material-ui/core": "4.10.2",
     "@mui/material": "5.10.6",
     "@mui/styles": "5.10.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "notistack": "^2.0.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
+    "notistack": "2.0.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "source-map-explorer": "^2.5.2"
+    "source-map-explorer": "2.5.2"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -49,10 +49,10 @@
     ]
   },
   "devDependencies": {
-    "chalk": "^5.0.1",
-    "check-prop-types": "^1.1.2",
-    "gh-pages": "^4.0.0",
-    "prop-types": "^15.8.1",
-    "react-styleguidist": "^12.0.0"
+    "chalk": "5.0.1",
+    "check-prop-types": "1.1.2",
+    "gh-pages": "4.0.0",
+    "prop-types": "15.8.1",
+    "react-styleguidist": "12.0.0"
   }
 }
