--- a/package.json
+++ b/package.json
@@ -5,40 +5,24 @@
     "email": "josiahayres@gmail.com",
     "url": "https://www.linkedin.com/in/josiahayres/"
   },
-  "version": "1.6.8",
+  "version": "2.0.0",
   "private": true,
   "homepage": "https://josiahayres.github.io/clocktime/",
   "dependencies": {
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
-    "@material-ui/core": "4.10.2",
-    "@mui/material": "5.10.6",
-    "@mui/styles": "5.10.6",
     "@suid/icons-material": "0.5.2",
     "@suid/material": "0.8.1",
     "@suid/vite-plugin": "0.1.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "babel-preset-solid": "1.6.3",
-    "notistack": "2.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
     "solid-js": "1.6.4",
-    "source-map-explorer": "2.5.2",
     "typescript": "4.9.4",
     "vite": "4.0.0",
     "vite-plugin-solid": "2.5.0"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'dist/**/*.js'",
     "deploy": "gh-pages -d build",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -59,10 +43,7 @@
     ]
   },
   "devDependencies": {
-    "chalk": "5.0.1",
-    "check-prop-types": "1.1.2",
     "gh-pages": "4.0.0",
-    "prop-types": "15.8.1",
-    "react-styleguidist": "12.0.0"
+    "source-map-explorer": "2.5.3"
   }
 }
