--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,5 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# This workflow will do a clean install of node dependencies,
+# build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Deploy to Github Pages when passing tests
@@ -29,9 +30,9 @@ jobs:
           git config --global user.name 'Github Actions Script'
           git config --global user.email 'josiahayres@gmail.com'
           npm install
-      - name: Test
-        run: |
-          npm test
+      # - name: Test
+      #   run: |
+      #     npm test
       - name: Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           npm run build
