--- a/package.json
+++ b/package.json
@@ -5,33 +5,30 @@
     "email": "josiahayres@gmail.com",
     "url": "https://www.linkedin.com/in/josiahayres/"
   },
-  "version": "1.6.8",
+  "version": "2.0.0",
   "private": true,
   "homepage": "https://josiahayres.github.io/clocktime/",
   "dependencies": {
-    "@emotion/react": "11.10.4",
-    "@emotion/styled": "11.10.4",
-    "@material-ui/core": "4.10.2",
-    "@mui/material": "5.10.6",
-    "@mui/styles": "5.10.6",
+    "@solidjs/router": "0.5.1",
+    "@suid/icons-material": "0.5.2",
+    "@suid/material": "0.8.1",
+    "@suid/vite-plugin": "0.1.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "notistack": "2.0.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "source-map-explorer": "2.5.2"
+    "babel-preset-solid": "1.6.3",
+    "solid-js": "1.6.4",
+    "typescript": "4.9.4",
+    "vite": "4.0.0",
+    "vite-plugin-solid": "2.5.0"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build && npm run styleguide:build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'dist/**/*.js'",
     "deploy": "gh-pages -d build",
-    "styleguide": "styleguidist server",
-    "styleguide:build": "styleguidist build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,10 +46,16 @@
     ]
   },
   "devDependencies": {
-    "chalk": "5.0.1",
-    "check-prop-types": "1.1.2",
+    "@babel/core": "7.20.5",
+    "@storybook/addon-actions": "6.5.14",
+    "@storybook/addon-essentials": "6.5.14",
+    "@storybook/addon-interactions": "6.5.14",
+    "@storybook/addon-links": "6.5.14",
+    "@storybook/builder-vite": "0.2.5",
+    "@storybook/html": "6.5.14",
+    "@storybook/testing-library": "0.0.13",
+    "babel-loader": "8.3.0",
     "gh-pages": "4.0.0",
-    "prop-types": "15.8.1",
-    "react-styleguidist": "12.0.0"
+    "source-map-explorer": "2.5.3"
   }
 }
